  - Added jquery and jquery-ui and the smoothness theme
  - Added container-dialog widget that creates a button that when clicked
    on opens a dialog with the contents of the container-dialog.
  - Added datetimepicker, which is the standard jquery datepicker plus the
    timepicker add-on, combined using some code from Apache OFBiz
  - Extended and now using database-driven screen visual themes
  - Can send Maps to HTTP response as JSON string (Web Facade)
- Service Facade
  - Service expand auto-parameters, get parameters from implements
  - Finished implementation of async/scheduled service calls
  - Service run on commit and on rollback of current tx
  - Service parameter type/subtype checking
  - Service parameter ESAPI/Antisamy HTML checks (any/safe/none)
  - Service authentication
  - Service parameter conversion/parsing and validation checks
  - Service ECA rules
- Entity Facade
  - View-entity fixes and testing, now most view-entity options work
  - Support entity-find.search-form-inputs element for form *-find fields
  - Automatic cache clearing for one, list (using RA cache), count caches
  - Entity extension
  - Entity audit-logging
  - Entity field encryption
  - Entity ECA rules
  - Support offset and limit as LIMIT/OFFSET or OFFSET/FETCH depending on
    configuration on the database element in the Moqui conf file
  - Database meta-data support for adding indexes when tables added
  - Automatically add columns if missing in table check
  - Add foreign keys to existing tables when table created
  - Added EntityDbMeta.createForeignKeysForExistingTables() to check the
    foreign keys of all entities with existing tables and add missing ones
    where both tables exist; useful to run once all desired tables have
    been created (through a data load, test script, etc) to round out the
    DB meta-data

Notable features not yet implemented:

- XML Screens
  - Screen form AJAX/DHTML for lookup